# plausiden.com

./: .composition-baseline.json  .gitignore  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  deny.toml  harvest.toml
.github/: dependabot.yml  lighthouserc.json
.github/scripts/: composition.py  coupling-check.sh  version-control-check.sh
.github/workflows/: audit.yml  avp.yml  changelog.yml  ci.yml  composition.yml  coverage.yml  external-monitors.yml  lighthouse.yml  release.yml
benches/: render.rs
cms-store/sites/plausiden-com/: site.toml
cms-store/sites/plausiden-com/pages/: why-pps.toml
docs/: AVP-LINK.md  DECISIONS.md  SITE_AUDIT.md
integrations/: avp.toml
scripts/: pd-deploy.sh  pd-deploy.sudoers
src/: admin.rs  cms.rs  components.rs  feedback_store.rs  handlers.rs  inquiry.rs  lib.rs  main.rs  sandbox.rs  security.rs  views.rs
src/components/: badge.rs  button.rs  card.rs
src/pages/: about.html  contact.html  services.html
src/snapshots/: plausiden_site__snapshots__about.snap  plausiden_site__snapshots__blog_index.snap  plausiden_site__snapshots__blog_post_avp.snap  plausiden_site__snapshots__blog_post_federated.snap  plausiden_site__snapshots__blog_post_plausible_deniability.snap  plausiden_site__snapshots__blog_post_provable_privacy.snap  plausiden_site__snapshots__blog_post_why_thundercrab.snap  plausiden_site__snapshots__blog_rss.snap  plausiden_site__snapshots__capabilities.snap  plausiden_site__snapshots__case_studies.snap  plausiden_site__snapshots__cms_doc_why_pps.snap  plausiden_site__snapshots__contact.snap  plausiden_site__snapshots__feedback.snap  plausiden_site__snapshots__home.snap  plausiden_site__snapshots__how_we_work.snap  plausiden_site__snapshots__pricing.snap  plausiden_site__snapshots__privacy.snap  plausiden_site__snapshots__robots.snap  plausiden_site__snapshots__services.snap  plausiden_site__snapshots__sitemap.snap  plausiden_site__snapshots__solutions_financial_advisors.snap  plausiden_site__snapshots__solutions_healthcare.snap  plausiden_site__snapshots__solutions_journalism.snap  plausiden_site__snapshots__solutions_legal.snap  plausiden_site__snapshots__solutions_nonprofit.snap  plausiden_site__snapshots__subscribe.snap  plausiden_site__snapshots__terms.snap
src/views/: about.rs  admin.rs  blog.rs  capabilities.rs  case_studies.rs  cms_pages.rs  contact.rs  email.rs  feedback.rs  home.rs  how_we_work.rs  layout.rs  legal.rs  not_found.rs  pricing.rs  services.rs  status.rs  subscribe.rs
src/views/posts/: avp_doctrine.rs  federated_learning.rs  mod.rs  plausible_deniability.rs  provable_privacy.rs  why_thundercrab.rs
src/views/solutions/: financial_advisors.rs  healthcare.rs  journalism.rs  legal.rs  mod.rs  nonprofit.rs  template.rs
static/: animations.css  index-CWVVhmVm.css  loom-tokens.css  menu.js  self-hosted-fonts.css  style.css
