[package]
name = "plausiden-site"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "PlausiDen — Rust rewrite. Zero-state, privacy-first, Axum + Maud."
license = "UNLICENSED"
publish = false

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "http2", "tokio", "tracing"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", default-features = false, features = [
    "compression-br",
    "compression-gzip",
    "set-header",
    "trace",
    "limit",
    "timeout",
    "fs",
] }
maud = { version = "0.27", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
thiserror = "2"
# Platform-conditional in-binary sandboxing. Layered on top of the
# systemd hardening unit (belt + suspenders).
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

# Leave stubbed; activate as the form + auth surfaces come online:
# governor = "0.8"     # rate limiting
# lettre  = "0.11"     # SMTP
# seccompiler = "0.5"  # syscall filter — v1.1 after landlock has baked

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = false

[profile.release-min]
inherits = "release"
opt-level = "z"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
missing_debug_implementations = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
# The crate is a binary; `pub` items inside private modules stay crate-internal
# by construction. Explicitly allowed to resolve the redundant_pub_crate vs
# unreachable_pub pincer.
redundant_pub_crate = "allow"
# Nursery lints that conflict with our intentional style:
option_if_let_else = "allow"
