[package]
name = "plausiden-site"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "PlausiDen — Rust rewrite. Zero-state, privacy-first, Axum + Maud."
license = "UNLICENSED"
publish = false

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "http2", "tokio", "tracing", "form", "query", "matched-path"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", default-features = false, features = [
    "compression-br",
    "compression-gzip",
    "set-header",
    "trace",
    "limit",
    "timeout",
    "fs",
] }
maud = { version = "0.27", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
thiserror = "2"
# Platform-conditional in-binary sandboxing. Layered on top of the
# systemd hardening unit (belt + suspenders).
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-rustls-tls", "builder"] }
governor = "0.8"

# SQLite-backed feedback store. CMS-shaped substrate that PlausiDen-CMS
# will eventually consume; until then the export endpoint dumps it as
# JSON / CSV / TSV.
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# Magic-link + session-cookie keyed-hash signing for the admin module.
# blake3::keyed_hash is a constant-time MAC; base64 is the URL-safe
# encoding for the link payload.
blake3 = "1"
base64 = "0.22"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }

# PlausiDen-Loom — typed design system. Path dep for local dev; CI
# uses git dep (see #52 in the task list).
loom-components = { path = "../PlausiDen-Loom/loom-components", version = "0.1" }
loom-icons = { path = "../PlausiDen-Loom/loom-icons", version = "0.1" }
loom-tokens = { path = "../PlausiDen-Loom/loom-tokens", version = "0.1" }

# Leave stubbed; activate after landlock has baked:
# seccompiler = "0.5"

[dev-dependencies]
# Snapshot tests against the rendered HTML/XML of every public route.
# Any byte-level change to the output requires `cargo insta review`,
# which forces a human glance before a layout regression ships.
insta = { version = "1", features = ["yaml", "filters"] }
http-body-util = "0.1"
# Microbenchmarks for the render hot path. Criterion's HTML reports
# land under target/criterion; run via `cargo bench`. A lib-target
# refactor of this crate is a prerequisite for the bench to actually
# build (the bench harness needs to import `build_router`); the
# Cargo.toml entry is kept here as the design pin so the next person
# touching this knows the intent + the gating step.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "render"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = false

[profile.release-min]
inherits = "release"
opt-level = "z"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
missing_debug_implementations = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
# The crate is a binary; `pub` items inside private modules stay crate-internal
# by construction. Explicitly allowed to resolve the redundant_pub_crate vs
# unreachable_pub pincer.
redundant_pub_crate = "allow"
# Nursery lints that conflict with our intentional style:
option_if_let_else = "allow"
